
* Thu Jul 03 16:08:05 2003, pabs <pabs@pablotron.org>
  * raggle: i don't like "Eeeeeek"

* Thu Jul 03 16:12:32 2003, pabs <pabs@pablotron.org>
  * raggle: switch order of $config['diag'] conditional (move it
    outside rescue block).  screen cleanup wasn't happening properly
    for error messages because of this rescue block.

* Thu Jul 03 16:16:17 2003, pabs <pabs@pablotron.org>
  * raggle: don't draw if text == nil or text.size <= 0 in
    draw_text

* Thu Jul 03 21:08:51 2003, pabs <pabs@pablotron.org>
  * ChangeLog: attributed % escape in die() to correct person

* Thu Jul 03 22:04:09 2003, pabs <pabs@pablotron.org>
  * AUTHORS: updated to reflect all the new patches

* Thu Jul 03 22:15:38 2003, pabs <pabs@pablotron.org>
  * TODO: added some new stuff, marked off finished stuff

* Fri Jul 04 18:14:19 2003, pabs <pabs@pablotron.org>
  * doc/pauls_feeds.yaml: remove Digital Theatre; it's nothing but
    trouble

* Sat Jul  5 01:01:57 2003, richlowe <richlowe@richlowe.net>
  * raggle: Escape everything we pass to Ncurses::mvprintw, it turns out
            that there's an sprintf hidden away in there.  (Thanks to
	    Richard Zidlicky for the backtrace, for some reason I hadn't
	    managed to get a non-mangled one previously).

* Tue Jul  8 17:31:30 2003, richlowe <richlowe@richlowe.net>
  * raggle: Change the regular expressions involving escaped forward
    slashes '\/', to use %r!! so we don't have the ugly escapes.  I find
    this more readable.

* Wed Jul  9 03:49:15 2003, richlowe <richlowe@richlowe.net>
  * raggle: Fix various parenthesis warnings, and one actual syntax error
            (I knew that ^L would come back and bite me in the ass),
	    raggle now runs under ruby1.8-preview3 (the first 1.8 preview
	    to include syck/YAML and REXML (according to ruby-lang.org))
  * README: Update to note that 1.8.0-preview3 works.
  * BUGS: Mark the "Doesn't work under 1.8" bug as fixed, also the format
          bug I fixed a few days ago
	


